# VolLab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/vollab/: version.hpp
core/src/: version.cpp
md/: CMakeLists.txt
md/src/: main.cpp
tests/: CMakeLists.txt  test_version.cpp
